cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_COMPILER "g++")

project(Baseline)

set(CMAKE_THREAD_PREFER_PTHREAD ON)                                                                                                                              
set(THREADS_PREFER_PTHREAD_FLAG ON)                                                                                                                             
find_package(Threads REQUIRED)


#set(CMAKE_LIBRARY_PATH /usr/local/lib:/opt/homebrew/lib) 
#set(CMAKE_LIBRARY_PATH ~/sw/include/)

find_library(NTL_LIB ntl REQUIRED)
find_library(GMP gmp REQUIRED)
find_library(SSL ssl REQUIRED)
find_library(CRYPTO crypto REQUIRED)
find_library(EMP_ZK emp-zk REQUIRED)
find_library(EMP_TOOL emp-tool REQUIRED)
set(CMAKE_EXE_LINKER_FLAGS "-lm -lntl -pthread -lssl -lcrypto")


#file(GLOB_RECURSE SRC_FILES src/*.cpp)
#file(GLOB_RECURSE HEADER_FILES include/*.h)
#set(SOURCES ${SRC_FILES} ${HEADER_FILES})
#add_executable(${PROJECT_NAME} ${SRC_FILES})
add_executable(Baseline test.cpp)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/local/include/")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4.1 -maes -mpclmul -msse2")


target_link_libraries(${PROJECT_NAME} ${NTL_LIB} ${GMP} ${EMP_ZK} ${EMP_TOOL} ${SSL} ${CRYPTO} Threads::Threads )

